--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Index.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Index.cshtml
@@ -13,13 +13,13 @@
 <div class="card">
     <div class="card-header">
         <div class="row">
-            <div class="col-md-7">
+            <div class="col-md-6">
                 <h3>Danh sách học viên</h3>
             </div>
             @if (user.IsInRole("Admin") || user.IsInRole("PhongNguon"))
             {
-                <div class="col-md-5">
-                    <div class="col-md-6">
+                <div class="col-md-6">
+                    <div class="col-md-5 col-md-offset-1">
                         <button class="btn btn-primary" type="submit" id="btnExport">
                             <i class="left-icon fa fa-download"></i>   Xuất ra Excel
                         </button>
@@ -30,6 +30,7 @@
                         </a>
                     </div>
                 </div>
+                <form class="hidden" id="exportForm" action="@Url.Action("ExportExcel", "ThongTinCaNhan")"></form>
             }
         </div>
         <hr />
@@ -64,7 +65,6 @@
             </table>
         </div>
     </div>
-    <form class="hidden" id="exportForm" action="@Url.Action("ExportExcel", "ThongTinCaNhan")"></form>
 </div>
 
 <script>
@@ -93,7 +93,10 @@
                 "sSearch": "Tìm kiếm:",
                 "sZeroRecords": "Không có dữ liệu phù hợp",
                 "sInfo": "Hiển thị từ _START_ đến _END_ trên tổng số _TOTAL_ dòng",
-                "sEmptyTable": "Không có dữ liệu",
+                "sEmptyTable": function () {
+                    $('button[id="btnExport"]').prop('disabled', true);
+                    return "Không có dữ liệu";
+                },
                 "sInfoFiltered": " - lọc ra từ _MAX_ dòng",
                 "sLengthMenu": "Hiển thị _MENU_ dòng",
                 "sProcessing": "Đang xử lý...",
