--- a/Vimas/Areas/HeThong/Views/NghiepDoan/Create.cshtml
+++ b/Vimas/Areas/HeThong/Views/NghiepDoan/Create.cshtml
@@ -14,7 +14,7 @@
         </div>
         <hr />
     </div>
-    <form id="createTrungTamForm" action="@this.Url.Action("Create")" method="post">
+    <form id="createNghiepDoanForm" action="@this.Url.Action("Create")" method="post">
         <div class="modal-body">
             @Html.AntiForgeryToken()
             <div class="form-horizontal">
@@ -142,7 +142,7 @@
         </div>
         <div class="modal-footer">
             <a href="@Url.Action("Index")" class="btn btn-danger">Huỷ</a>
-            <button type="submit" class="btn btn-primary"><i class="left-icon fa fa-check"></i>Hoàn tất</button>
+            <button type="button" onclick="Create()" class="btn btn-primary"><i class="left-icon fa fa-check"></i>Hoàn tất</button>
         </div>
     </form>
 </div>
@@ -215,6 +215,27 @@
         function (start, end, label) {
             $('#NgayKyHopDong').val(start.format('LL'));
             $('input[name="NgayKyHopDong"]').val(start.format("DD/MM/YYYY"));
+        });
+    }
+
+    function Create() {
+        var formData = $('#createNghiepDoanForm').serialize();
+
+        $.ajax({
+            url: '@this.Url.Action("Create")',
+            data: formData,
+            method: 'POST',
+            success: function (result) {
+                swal({title:"Tạo",
+                    text: result.message,
+                    type: "success"
+                }, function () {
+                    window.location.href = "@this.Url.Action("Index")";
+                });
+            },
+            error: function (error) {
+                swal('Lỗi', error.message, 'error');
+            }
         });
     }
 </script>
