Chỉnh sửa trạng thái disable của button xuất excel khi không có record trong bảng + cân đối giao diện button.

--- a/Vimas/Areas/HeThong/Views/CongTyChungNghe/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/CongTyChungNghe/Index.cshtml
@@ -14,7 +14,7 @@
             @if (user.IsInRole("Admin") || user.IsInRole("PhongXKLD"))
             {
                 <div class="col-md-6">
-                    <div class="col-md-6">
+                    <div class="col-md-5 col-md-offset-1">
                         <button class="btn btn-primary" type="submit" id="btnExport">
                             <i class="left-icon fa fa-download"></i>   Xuất ra Excel
                         </button>
@@ -86,7 +86,10 @@
                 "sSearch": "Tìm kiếm:",
                 "sZeroRecords": "Không có dữ liệu phù hợp",
                 "sInfo": "Hiển thị từ _START_ đến _END_ trên tổng số _TOTAL_ dòng",
-                "sEmptyTable": "Không có dữ liệu",
+                "sEmptyTable": function () {
+                    $('button[id="btnExport"]').prop('disabled', true);
+                    return "Không có dữ liệu";
+                },
                 "sInfoFiltered": " - lọc ra từ _MAX_ dòng",
                 "sLengthMenu": "Hiển thị _MENU_ dòng",
                 "sProcessing": "Đang xử lý...",
