--- a/Vimas/Areas/HeThong/Views/TrungTamGTVL/Detail.cshtml
+++ b/Vimas/Areas/HeThong/Views/TrungTamGTVL/Detail.cshtml
@@ -73,6 +73,12 @@
                             @Html.DisplayTextFor(q => q.NguoiDaiDien)
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-4" for="ChucDanh">chức danh</label>
+                        <div class="col-md-6">
+                            @Html.DisplayTextFor(q => q.ChucDanh)
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
