--- a/Vimas/Areas/HeThong/Views/CongTyTiepNhan/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/CongTyTiepNhan/Index.cshtml
@@ -8,15 +8,20 @@
 <div class="card">
     <div class="card-header">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-7">
                 <h3>Danh sách công ty tiếp nhận</h3>
             </div>
             @if (user.IsInRole("Admin") || user.IsInRole("PhongXKLD"))
             {
-                <div class="col-md-4">
+                <div class="col-md-5">
                     <button type="button" onclick="showCreateCTTN()" class="btn btn-primary pull-right ">
                         <i class="left-icon glyphicon glyphicon-plus"></i>   Thêm công ty
                     </button>
+                    <div class="col-md-5 col-md-offset-1">
+                        <button class="btn btn-primary" type="submit" id="btnExport">
+                            <i class="left-icon fa fa-download"></i>   Xuất ra Excel
+                        </button>
+                    </div>
                 </div>
             }
         </div>
@@ -65,8 +70,12 @@
 
 <div id="createCTTNPanel" class="modal fade" data-backdrop="static" data-keyboard="true"></div>
 <div id="editCTTNPanel" class="modal fade" data-backdrop="static" data-keyboard="true"></div>
+<form class="hidden" id="exportForm" action="@Url.Action("ExportExcel", "CongTyTiepNhan")"></form>
 
 <script>
+    $('#btnExport').on('click', null, function () {
+        $('#exportForm').submit();
+    });
     $(document).ready(function () {
         InitDatatable();
     });
