--- a/Vimas/Areas/HocVien/Views/QuaTrinhHocTap/Edit.cshtml
+++ b/Vimas/Areas/HocVien/Views/QuaTrinhHocTap/Edit.cshtml
@@ -35,6 +35,7 @@
                         @Html.LabelFor(q => q.NganhHoc, new { @class = "control-label col-md-4" })
                         <div class="col-md-5">
                             @Html.TextBoxFor(q => q.NganhHoc, new { @class = " form-control col-sm-12" })
+                            <!-- Ngành học cho phép null -->
                             @Html.ValidationMessageFor(q => q.NganhHoc)
                         </div>
                     </div>
