--- a/Vimas/Areas/HocVien/Views/ThongTinDuTuyen/Detail.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinDuTuyen/Detail.cshtml
@@ -170,7 +170,7 @@
         </table>
     </div>
     <div class="modal-footer">
-        <a href="@Url.Action("Index")" class="btn btn-danger">Quay lại</a>
+        <a href="@Url.Action("Index")" class="btn btn-primary">Quay lại</a>
     </div>
 </div>
 
