--- a/Vimas/Areas/HocVien/Views/SucKhoe/Detail.cshtml
+++ b/Vimas/Areas/HocVien/Views/SucKhoe/Detail.cshtml
@@ -144,7 +144,7 @@
         </div>
     </div>
     <div class="modal-footer">
-        <a href="@Url.Action("Index")" class="btn btn-danger">Quay lại</a>
+        <a href="@Url.Action("Index")" class="btn btn-primary">Quay lại</a>
     </div>
 </div>
 
