--- a/Vimas/Areas/HocVien/Views/BienBan/Detail.cshtml
+++ b/Vimas/Areas/HocVien/Views/BienBan/Detail.cshtml
@@ -11,7 +11,7 @@
             @Html.HiddenFor(q => q.id)
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Thông tin biên bả</h4>
+                <h4 class="modal-title">Thông tin biên bản</h4>
             </div>
             <div class="modal-body">
                 <div class="form-horizontal">
