--- a/Vimas/Areas/HocVien/Views/ThongTinNopTien/Edit.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinNopTien/Edit.cshtml
@@ -13,7 +13,7 @@
             @Html.HiddenFor(q => q.Active)
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Thêm QTHT</h4>
+                <h4 class="modal-title">Sửa QTHT</h4>
             </div>
             <div class="modal-body">
                 <div class="form-horizontal">
