--- a/Vimas/Areas/HeThong/Views/HopDongDOLAB/Detail.cshtml
+++ b/Vimas/Areas/HeThong/Views/HopDongDOLAB/Detail.cshtml
@@ -8,6 +8,10 @@
     .select2 {
         width: 100% !important;
     }
+    #selectedTTCNTable {
+        min-width: 250px !important;
+        max-width: 500px !important;
+    }
 </style>
 
 <div class="modal-dialog modal-lg">
@@ -24,15 +28,13 @@
                         @Html.LabelFor(q => q.NgayDangKy, new { @class = "control-label col-md-4" })
                         <div class="col-md-5">
                             <div class="fg-line" id="NgayDangKy">
-                                @Html.DisplayTextFor(q => q.NgayDangKy)
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(q => q.NgayNhan, new { @class = "control-label col-md-4" })
                         <div class="col-md-5">
-                            <div class="fg-line form-control" id="NgayNhan">
-                                @Html.DisplayTextFor(q => q.NgayNhan)
+                            <div class="fg-line" id="NgayNhan">
                             </div>
                         </div>
                     </div>
@@ -56,7 +58,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-10 col-sm-offset-1">
+            <div class="col-sm-10 col-sm-offset-1" >
                 <br />
                 <table id="selectedTTCNTable" class="table table-striped table-bordered table-hover">
                     <thead>
@@ -77,13 +79,14 @@
 
 <script>
     $(document).ready(function () {
+        moment.locale('vi');
         @if (this.Model.NgayDangKy.HasValue)
         {
-            <text>$('#NgayDangKy').append(moment('@this.Model.NgayDangKy.Value.ToShortDateString()', 'DD/MM/YYYY').format('LL'));</text>
+            <text>$('#NgayDangKy').append(moment('@this.Model.NgayDangKy.GetValueOrDefault().ToShortDateString()', 'DD/MM/YYYY').format('LL'));</text>
         }
         @if (this.Model.NgayNhan.HasValue)
         {
-            <text>$('#NgayNhan').append(moment('@this.Model.NgayNhan.Value.ToShortDateString()', 'DD/MM/YYYY').format('LL'));</text>
+            <text>$('#NgayNhan').append(moment('@this.Model.NgayNhan.GetValueOrDefault().ToShortDateString()', 'DD/MM/YYYY').format('LL'));</text>
         }
 
         selectedTTCNTable();
